Small UI fixes (#64)
* fix dataset names overflowing

* fix pass/fail width

* fix wrong traces displayed in search

* remove debugging info

--- a/app-ui/src/App.scss
+++ b/app-ui/src/App.scss
@@ -486,6 +486,8 @@ div.panel {
         padding: 0pt;
         font-size: 12pt !important;
         line-height: 30pt;
+        overflow: hidden;
+        text-overflow: ellipsis;
 
         svg {
           margin-right: 5pt;
@@ -1090,11 +1092,16 @@ button.primary .shortcut {
         }
 
         .test-result {
+          display: inline-block; 
+          text-align: center;
           padding: 2pt 4pt;
           font-size: 9pt;
           line-height: 16pt;
           color: white;
           border-radius: 2pt;
+          width: 24pt;
+          min-width: 24pt;
+          
 
           &.pass {
             background-color: #1E883E;
@@ -1551,6 +1558,12 @@ header.top .sidebar {
   margin: 10pt;
   padding: 10pt;
   border: 1pt solid $border-color;
+  max-width: 100%;
+
+  &.split-view {
+    max-width: 50%;
+    overflow: hidden;
+  }
 
   h2 {
     font-size: 12pt;
